// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`--help 1`] = `
"
error: null
signal: null
status: 0
stderr: ((EMPTY))
stdout: |+

  index <text> [options]

  Options:
    --version      Show version number                                   [boolean]
    --charSep, -c  Number of spaces between characters in a word
                                                             [number] [default: 1]
    --wordSep, -w  Number of spaces between words            [number] [default: 2]
    --help         Show help                                             [boolean]


"
`;

exports[`when call with multiple inputs at once 1`] = `
"
error: null
signal: null
status: 0
stderr: ((EMPTY))
stdout: |+

  h e l l o  w o r l d
  f o o  b a r  b a z
  a b c  d e  f


"
`;
